Moved submit/reset buttons side to side Removed horizontal scroll Changed route color Fixed spacing for weather, time and date Need to review title/labels for occupancy charts

--- a/static/style.css
+++ b/static/style.css
@@ -1,28 +1,39 @@
 /* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
+* Always set the map height explicitly to define the size of the div element
+* that contains the map. 
+*/
 
 /*
- * Optional: Makes the sample page fill the window. 
- */
+* Optional: Makes the sample page fill the window. 
+*/
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   display: flex;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 #form {
-  width: 280px;
+  width: 89.5%;
   margin: 1rem;
   height: 40vh;
 }
 
 #form input[type="text"],
-#form input[type="datetime-local"],
+#form input[type="datetime-local"] {
+  border: none; /* Removed border */
+  background-color: #2d2c2c; /* Blue background color */
+  color: white;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 5px;
+  width: 20.5vw;
+}
+
 #form input[type="submit"],
 #form input[type="reset"] {
   border: none; /* Removed border */
@@ -31,7 +42,7 @@ body {
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 5px;
-  width: 20vw;
+  width: 10vw;
 }
 
 #map-container {
@@ -96,7 +107,7 @@ body {
 
 #leftbar {
   height: 100%;
-  width: 25vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   border: none; /* Removed border */
